cambio en el label y checkbox de editUsuario

--- a/views/sistema/centerBox/editUsuario.phtml
+++ b/views/sistema/centerBox/editUsuario.phtml
@@ -118,10 +118,10 @@
                                             
                                         </tbody>
                                     </table>
-                                  
-                                   <input type="checkbox" id="chkHabilita" name="chkHabilita" class="finish btn-primary btn">
-                                    <label>Cambiar Contraseña</label>
-                                   
+                                  <div class="checkbox block">
+                                   <input type="checkbox" id="chkHabilita" name="chkHabilita">
+                                   <label>Cambiar Contraseña</label>
+                                  </div>
                                    <?php
                                    
                                    
